--- a/app/src/main/res/layout/activity_manualrideadding.xml
+++ b/app/src/main/res/layout/activity_manualrideadding.xml
@@ -10,6 +10,23 @@
     tools:context=".ManualRideAddingActivity"
     tools:ignore="HardcodedText">
 
+    <ImageButton
+        android:id="@+id/home_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:contentDescription="Logo"
+        android:src="@drawable/home_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.1"
+        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="0dp"
@@ -43,6 +60,7 @@
         android:id="@+id/bicycle_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/averagesans_regular"
         android:layout_marginTop="10dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
@@ -66,24 +84,93 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bicycle_spinner"/>
 
-    <!--<DatePicker
-        android:layout_width="232dp"
-        android:layout_height="78dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="378dp" />
-        -->
+    <LinearLayout
+        android:id="@+id/date_time_texts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="0dp"
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@id/ride_details">
+
+        <TextView
+            android:id="@+id/date_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:fontFamily="@font/averagesans_regular"
+            android:text="Date"
+            android:textColor="@android:color/black"
+            android:textSize="8pt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/time_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:fontFamily="@font/averagesans_regular"
+            android:text="Time"
+            android:textColor="@android:color/black"
+            android:textSize="8pt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/date_time_picker"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        app:layout_constraintHeight_percent="0.04"
+        app:layout_constraintTop_toBottomOf="@id/date_time_texts">
+
+        <TextView
+            android:id="@+id/date_picker"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="showDatePicker"
+            android:text="Today"
+            android:fontFamily="@font/averagesans_regular"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            />
+
+        <TextView
+            android:id="@+id/time_picker"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="showTimePicker"
+            android:text="Now"
+            android:fontFamily="@font/averagesans_regular"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
 
     <EditText
         android:id="@+id/ridden_distance"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="30dp"
         android:hint="Distance"
+        android:gravity="center"
+        android:fontFamily="@font/averagesans_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ride_details"
+        app:layout_constraintTop_toBottomOf="@id/date_time_picker"
         app:layout_constraintWidth_percent="0.22" />
 
     <EditText
@@ -91,12 +178,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="30dp"
         android:hint="Time"
+        android:gravity="center"
+        android:fontFamily="@font/averagesans_regular"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.406"
+        app:layout_constraintHorizontal_bias="0.764"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ride_details"
+        app:layout_constraintTop_toBottomOf="@id/date_time_picker"
         app:layout_constraintWidth_percent="0.22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
