--- a/app/src/main/res/layout/activity_manualrideadding.xml
+++ b/app/src/main/res/layout/activity_manualrideadding.xml
@@ -46,10 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
         android:text="Select a bicycle"
         android:textSize="12pt"
         android:textStyle="bold"
+        android:gravity="center"
         android:fontFamily="@font/averagesans_regular"
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,12 +69,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <View
+        android:id="@+id/horizontal_line1"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="20dp"
+        android:background="#808080"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bicycle_spinner"
+        app:layout_constraintWidth_percent="0.9"/>
+
     <TextView
         android:id="@+id/ride_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
         android:text="Ride details"
         android:textSize="12pt"
         android:textStyle="bold"
@@ -82,7 +93,7 @@
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bicycle_spinner"/>
+        app:layout_constraintTop_toBottomOf="@id/horizontal_line1"/>
 
     <LinearLayout
         android:id="@+id/date_time_texts"
@@ -90,7 +101,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="0dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/ride_details">
 
         <TextView
@@ -102,7 +113,7 @@
             android:fontFamily="@font/averagesans_regular"
             android:text="Date"
             android:textColor="@android:color/black"
-            android:textSize="8pt"
+            android:textSize="9pt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -115,7 +126,7 @@
             android:fontFamily="@font/averagesans_regular"
             android:text="Time"
             android:textColor="@android:color/black"
-            android:textSize="8pt"
+            android:textSize="9pt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
@@ -126,8 +137,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        app:layout_constraintHeight_percent="0.04"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHeight_percent="0.05"
         app:layout_constraintTop_toBottomOf="@id/date_time_texts">
 
         <TextView
@@ -135,25 +146,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_margin="3dp"
             android:gravity="center"
             android:onClick="showDatePicker"
             android:text="Today"
             android:fontFamily="@font/averagesans_regular"
             android:textColor="@android:color/white"
             android:textSize="16sp"
+            android:background="#66000000"
             />
 
         <TextView
             android:id="@+id/time_picker"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="3dp"
             android:layout_weight="1"
             android:gravity="center"
             android:onClick="showTimePicker"
             android:text="Now"
             android:fontFamily="@font/averagesans_regular"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:background="#66000000"/>
 
     </LinearLayout>
 
