--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -123,7 +123,7 @@
         <TextView
             android:id="@+id/bikes"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             android:background="@null"
@@ -136,21 +136,16 @@
             app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.04"
             />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_bikes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginStart="30dp"
             app:layout_constraintTop_toBottomOf="@id/bikes"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintHeight_percent="0.07"
             android:scrollbars="none"/>
 
         <View
@@ -167,7 +162,7 @@
         <TextView
             android:id="@+id/parts"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             android:background="@null"
@@ -180,7 +175,6 @@
             app:layout_constraintTop_toBottomOf="@id/horizontal_line2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.04"
             />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -210,7 +204,7 @@
         <TextView
             android:id="@+id/rides"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             android:background="@null"
@@ -223,7 +217,6 @@
             app:layout_constraintTop_toBottomOf="@id/horizontal_line3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.04"
             />
 
         <androidx.recyclerview.widget.RecyclerView
