--- a/app/src/main/res/layout/activity_manualrideadding.xml
+++ b/app/src/main/res/layout/activity_manualrideadding.xml
@@ -57,6 +57,7 @@
         app:layout_constraintTop_toBottomOf="@id/logo"/>
 
     <Spinner
+        android:spinnerMode="dropdown"
         android:id="@+id/bicycle_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,6 +96,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/horizontal_line1"/>
 
+    <EditText
+        android:id="@+id/title_of_ride"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:fontFamily="@font/averagesans_regular"
+        android:gravity="center"
+        android:hint="Title of your ride"
+        app:layout_constraintTop_toBottomOf="@id/ride_details"/>
+
     <LinearLayout
         android:id="@+id/date_time_texts"
         android:layout_width="match_parent"
@@ -102,7 +114,7 @@
         android:orientation="horizontal"
         android:padding="0dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/ride_details">
+        app:layout_constraintTop_toBottomOf="@id/title_of_ride">
 
         <TextView
             android:id="@+id/date_text"
@@ -153,8 +165,7 @@
             android:fontFamily="@font/averagesans_regular"
             android:textColor="@android:color/white"
             android:textSize="16sp"
-            android:background="#66000000"
-            />
+            android:background="#66000000" />
 
         <TextView
             android:id="@+id/time_picker"
@@ -186,7 +197,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:hint="Distance"
+        android:hint="Distance(km)"
         android:gravity="center"
         android:fontFamily="@font/averagesans_regular" />
 
@@ -195,9 +206,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:hint="Time"
+        android:hint="Time(hh:mm:ss)"
         android:gravity="center"
         android:fontFamily="@font/averagesans_regular" />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/manual_ride_adding_button_submit"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@null"
+        android:contentDescription="manual_ride_adding_button_submit"
+        android:scaleType="fitCenter"
+        android:src="@drawable/submitbutton"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/distance_time_section"
+        app:layout_constraintHeight_percent="0.07"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
