Working project before changing from bycicle to bicycle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="ByciclePartsTracker"
+        android:text="BicyclePartsTracker"
         android:textSize="14pt"
         android:textColor="#6A6A6A"
         android:textStyle="bold"
@@ -44,7 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="ByciclePartsTracker needs to connect to your Strava account for the best results."
+        android:text="BicyclePartsTracker needs to connect to your Strava account for the best results."
         android:textSize="7pt"
         android:textColor="#FFFFFF"
         android:textAlignment="center"
