--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -55,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="ByciclePartsTracker"
+                    android:text="BicyclePartsTracker"
                     android:textSize="14pt"
                     android:textColor="#6A6A6A"
                     android:textStyle="bold"
