--- a/app/src/main/res/layout/activity_partsadding.xml
+++ b/app/src/main/res/layout/activity_partsadding.xml
@@ -42,7 +42,7 @@
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/select_bicycle"
+        android:id="@+id/select_bicycle_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -66,7 +66,47 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/select_bicycle"
+        app:layout_constraintTop_toBottomOf="@id/select_bicycle_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:id="@+id/horizontal_line1"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="16dp"
+        android:background="#808080"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintTop_toBottomOf="@id/bicycle_spinner"/>
+
+    <TextView
+        android:id="@+id/enter_part_details_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Enter part details"
+        android:textSize="12pt"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:fontFamily="@font/averagesans_regular"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/horizontal_line1"/>
+
+    <Spinner
+        android:spinnerMode="dropdown"
+        android:id="@+id/part_type_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/averagesans_regular"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/enter_part_details_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -78,25 +118,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintTop_toBottomOf="@id/bicycle_spinner"/>
+        app:layout_constraintTop_toBottomOf="@id/part_type_spinner"/>
 
-    <EditText
-        android:id="@+id/part_type_edittext"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Part Type"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintTop_toBottomOf="@id/part_name_edittext"/>
-
-
-    <Button
+    <ImageButton
         android:id="@+id/add_part_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Part"
-        app:layout_constraintTop_toBottomOf="@id/part_type_edittext"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@null"
+        android:contentDescription="manual_ride_adding_button_submit"
+        android:scaleType="fitCenter"
+        android:src="@drawable/submitbutton"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/part_name_edittext"
+        app:layout_constraintHeight_percent="0.07"
+        app:layout_constraintWidth_percent="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
