UI/UX data input changes and color changes

--- a/app/src/main/res/layout/activity_manualrideadding.xml
+++ b/app/src/main/res/layout/activity_manualrideadding.xml
@@ -199,7 +199,9 @@
         android:layout_weight="1"
         android:hint="Distance(km)"
         android:gravity="center"
-        android:fontFamily="@font/averagesans_regular" />
+        android:fontFamily="@font/averagesans_regular"
+        android:inputType="numberDecimal"
+        android:digits="0123456789."/>
 
     <EditText
         android:id="@+id/ridden_time_input"
