--- a/app/src/main/res/layout/activity_partsadding.xml
+++ b/app/src/main/res/layout/activity_partsadding.xml
@@ -74,7 +74,7 @@
         android:id="@+id/horizontal_line1"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="25dp"
         android:background="#808080"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,40 +96,82 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/horizontal_line1"/>
 
-    <Spinner
-        android:spinnerMode="dropdown"
-        android:id="@+id/part_type_spinner"
+
+    <LinearLayout
+        android:id="@+id/part_type_name_text_sectoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/averagesans_regular"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/enter_part_details_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:orientation="horizontal"
+        android:padding="0dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/enter_part_details_text">
 
-    <EditText
-        android:id="@+id/part_name_edittext"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Part Name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintTop_toBottomOf="@id/part_type_spinner"/>
+        <TextView
+            android:id="@+id/part_type_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:fontFamily="@font/averagesans_regular"
+            android:text="Type"
+            android:textColor="@android:color/black"
+            android:textSize="9pt" />
+
+        <TextView
+            android:id="@+id/part_name_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:fontFamily="@font/averagesans_regular"
+            android:text="Name"
+            android:textColor="@android:color/black"
+            android:textSize="9pt"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/part_type_name_enter_sectoin"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintTop_toBottomOf="@id/part_type_name_text_sectoin">
+
+        <Spinner
+            android:spinnerMode="dropdown"
+            android:id="@+id/part_type_spinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/averagesans_regular"
+            android:layout_marginEnd="0dp"
+            android:gravity="center"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:id="@+id/part_name_edittext"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="Name of the part"
+            android:gravity="center"
+            android:layout_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/part_type_spinner"/>
+
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/add_part_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@null"
-        android:contentDescription="manual_ride_adding_button_submit"
+        android:contentDescription="Add Part button"
         android:scaleType="fitCenter"
         android:src="@drawable/submitbutton"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/part_name_edittext"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/part_type_name_enter_sectoin"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintWidth_percent="0.4"
         app:layout_constraintStart_toStartOf="parent"
