--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.BPT" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/backgroundcolortop</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:textColorLink">@color/backgroundcolortop</item>
     </style>
 
     <style name="Theme.BPT" parent="Base.Theme.BPT" />
