UI/UX changes before implementing the partTypesSpinner

--- a/app/src/main/res/layout/item_ride.xml
+++ b/app/src/main/res/layout/item_ride.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="16dp"
+    tools:ignore="HardCodedText">
 
     <TextView
         android:id="@+id/bicycle_text_view"
