--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,151 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_color"
-    android:padding="0dp"
     tools:context=".AccountActivity"
-    tools:ignore="HardcodedText">
+    android:fillViewport="true">  <!-- Fills the screen's viewport -->
 
-    <ImageButton
-        android:id="@+id/home_button"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:background="@null"
-        android:scaleType="fitCenter"
-        android:contentDescription="Logo"
-        android:src="@drawable/home_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.08"
-        app:layout_constraintHeight_percent="0.04"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="5dp"
-        android:contentDescription="Logo"
-        android:src="@drawable/logo"
-        app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/greeting_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hi user!"
-        android:textSize="20pt"
-        android:fontFamily="@font/lalezar_regular"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="16dp" />
-
-    <LinearLayout
-        android:id="@+id/settins_buttons_section"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toBottomOf="@id/greeting_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:background="@drawable/background_color"
+        android:padding="0dp"
+        tools:ignore="HardcodedText">
 
-        <LinearLayout
-            android:id="@+id/settings_section"
+        <ImageButton
+            android:id="@+id/home_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:contentDescription="Logo"
+            android:src="@drawable/home_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.04"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="5dp"
+            android:contentDescription="Logo"
+            android:src="@drawable/logo"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/greeting_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="3dp">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/settings_icon"
-                android:contentDescription="Settings Icon"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="5dp"
-                app:layout_constraintTop_toTopOf="@id/greeting_text"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Settings"
-                android:textSize="12pt"
-                android:fontFamily="@font/averagesans_regular"
-                android:textColor="@android:color/black"
-                android:layout_gravity="center_vertical"/>
-        </LinearLayout>
+            android:text="Hi user!"
+            android:textSize="20pt"
+            android:fontFamily="@font/lalezar_regular"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toBottomOf="@id/logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="16dp" />
 
         <LinearLayout
-            android:id="@+id/change_password_section"
-            android:layout_width="wrap_content"
+            android:id="@+id/settins_buttons_section"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="3dp"
-            android:layout_marginTop="10dp">
+            android:orientation="vertical"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/greeting_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/change_pass_icon"
-                android:contentDescription="Change Password Icon"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="5dp"/>
-
-            <TextView
+            <LinearLayout
+                android:id="@+id/settings_section"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Change password"
-                android:textSize="12pt"
-                android:fontFamily="@font/averagesans_regular"
-                android:textColor="@android:color/black"
-                android:layout_gravity="center_vertical"/>
-        </LinearLayout>
+                android:orientation="horizontal"
+                android:padding="3dp">
 
-        <LinearLayout
-            android:id="@+id/logout_section"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="3dp"
-            android:layout_marginTop="10dp">
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/settings_icon"
+                    android:contentDescription="Settings Icon"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp" />
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/logout_icon"
-                android:contentDescription="Logout Icon"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="5dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Settings"
+                    android:textSize="12pt"
+                    android:fontFamily="@font/averagesans_regular"
+                    android:textColor="@android:color/black"
+                    android:layout_gravity="center_vertical" />
+            </LinearLayout>
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/change_password_section"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Log out"
-                android:textSize="12pt"
-                android:fontFamily="@font/averagesans_regular"
-                android:textColor="@android:color/black"
-                android:layout_gravity="center_vertical"/>
+                android:orientation="horizontal"
+                android:padding="3dp"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/change_pass_icon"
+                    android:contentDescription="Change Password Icon"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Change password"
+                    android:textSize="12pt"
+                    android:fontFamily="@font/averagesans_regular"
+                    android:textColor="@android:color/black"
+                    android:layout_gravity="center_vertical" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/logout_section"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="3dp"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/logout_icon"
+                    android:contentDescription="Logout Icon"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Log out"
+                    android:textSize="12pt"
+                    android:fontFamily="@font/averagesans_regular"
+                    android:textColor="@android:color/black"
+                    android:layout_gravity="center_vertical" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
