--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -15,26 +15,25 @@
         android:padding="0dp"
         tools:ignore="HardcodedText">
 
-        <!-- Felső szekció, fixen reszponzív méretekkel -->
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/account_button_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.08"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/account_button"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
                 android:background="@null"
                 android:contentDescription="accountButton"
                 android:scaleType="fitCenter"
                 android:src="@drawable/account_icon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintWidth_percent="0.15"/>
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -43,7 +42,7 @@
             android:id="@+id/title_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.05"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/account_button_layout">
 
             <TextView
@@ -67,16 +66,16 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ride_adding_button_layout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.07"
+            android:layout_height="70dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/title_layout"
             tools:layout_editor_absoluteX="0dp">
 
             <ImageButton
                 android:id="@+id/manual_ride_adding_button"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="30dp"
                 android:background="@null"
                 android:contentDescription="Manual ride adding"
                 android:scaleType="fitCenter"
@@ -89,8 +88,8 @@
             <ImageButton
                 android:id="@+id/sync_with_strava_button"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="25dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="30dp"
                 android:background="@null"
                 android:contentDescription="Sync with STRAVA"
                 android:scaleType="fitCenter"
@@ -196,10 +195,11 @@
 
                 <ImageButton
                     android:id="@+id/add_parts_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:layout_marginStart="15dp"
                     android:background="@null"
+                    android:scaleType="fitCenter"
                     android:contentDescription="Parts_adding_button"
                     android:src="@drawable/parts_adding_button"
                     app:layout_constraintStart_toEndOf="@id/parts_text"
