syncWithStravaButton click event -> Toast message in the dashboard

--- a/app/src/main/res/layout/item_bike.xml
+++ b/app/src/main/res/layout/item_bike.xml
@@ -6,8 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="17dp"
     app:cardElevation="0dp"
+    app:cardUseCompatPadding="true"
     android:layout_margin="7dp"
-    app:cardBackgroundColor="#59FF6626"
+    app:cardBackgroundColor="#33FF4B00"
     tools:ignore="HardcodedText">
 
     <LinearLayout
