--- a/app/src/main/res/layout/item_ride.xml
+++ b/app/src/main/res/layout/item_ride.xml
@@ -7,7 +7,7 @@
     app:cardCornerRadius="17dp"
     app:cardElevation="0dp"
     android:layout_margin="7dp"
-    app:cardBackgroundColor="#59FF6626"
+    app:cardBackgroundColor="#33FF4B00"
     tools:ignore="HardCodedText">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -75,6 +75,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/title_bicycle_parts_distance_items_layout">
 
@@ -85,7 +87,7 @@
                 android:fontFamily="@font/averagesans_regular"
                 android:text="Date"
                 android:textColor="#000000"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/time_text_view"
@@ -94,7 +96,7 @@
                 android:fontFamily="@font/averagesans_regular"
                 android:text="Time"
                 android:textColor="#000000"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
         </LinearLayout>
 
