--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="grey">#FF808080</color>
     <color name="white">#FFFFFFFF</color>
     <color name="backgroundcolortop">#FF8000</color>
+
 </resources>
