--- a/app/src/main/res/layout/activity_partdetails.xml
+++ b/app/src/main/res/layout/activity_partdetails.xml
@@ -142,13 +142,13 @@
                     tools:ignore="HardcodedText">
 
                     <TextView
-                        android:id="@+id/services_text"
+                        android:id="@+id/service_intervals_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:fontFamily="@font/lalezar_regular"
                         android:gravity="center"
-                        android:text="Services"
+                        android:text="Service intervals"
                         android:textAlignment="center"
                         android:textColor="#000000"
                         android:textSize="30sp"
@@ -168,7 +168,7 @@
                         android:scaleType="fitCenter"
                         android:src="@drawable/parts_adding_button"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/services_text"
+                        app:layout_constraintStart_toEndOf="@id/service_intervals_text"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.5" />
 
